--- a/index.html
+++ b/index.html
@@ -5,20 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selma Corretora</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     
     <header>
-        <a href="#" class="brand">Corretora</a>
+        <a href="#" class="brand">SELMA CORRETORA</a>
         <div class="navigation">
             <div class="navigation-items">
                 <a href="#">Home</a>
-                <a href="#">Contact Us</a>
+                <a href="#">Fale Conosco</a>
             </div>
         </div>
     </header>
+
+    <section class="home">
+        <div class="content">
+            <h1>Wonderful.<br><span>Island</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, quos nostrum! Earum perspiciatis quidem, reiciendis dolores explicabo exercitationem deserunt tenetur et ab porro adipisci sapiente doloremque, officiis mollitia dignissimos molestiae rerum vitae culpa, aliquam assumenda ratione impedit. Distinctio voluptate quibusdam, similique veritatis dolorem vel provident optio reiciendis saepe dolorum accusamus rerum eveniet ipsum, harum pariatur natus vero! Dignissimos cupiditate accusamus doloribus sed inventore consequatur consectetur, perferendis reprehenderit repudiandae, nisi ea dolores nulla illo blanditiis tempora non unde ullam quas quos sapiente! Modi ipsum amet dolores non ipsa suscipit pariatur tempora maiores porro? Voluptas, aspernatur quod. Voluptas nemo iusto ipsa tempore?,</p>
+            <a href="#">Continuar Lendo</a>
+        </div>
+        <div class="media-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+
+    </section>
 
 </body>
 </html>
