--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     
     <header>
         <a href="#" class="brand">SELMA CORRETORA</a>
+        <div class="menu-btn"></div>
         <div class="navigation">
             <div class="navigation-items">
                 <a href="#">Home</a>
