--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
 
     </section>
 
+    <script type="text/javascript">
+        //Javascript of responsive navigation menu
+        const menuBtn = document.querySelector(".menu-btn")
+
+        menuBtn.addEventListener("click", () => {
+            menuBtn.classList.toggle("active");
+        })
+    </script>
+
 </body>
 </html>
