--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 
     <script type="text/javascript">
         //Javascript of responsive navigation menu
-        const menuBtn = document.querySelector(".menu-btn")
+        const menuBtn = document.querySelector(".menu-btn");
+        const navigation = document.querySelector(".navigation");
 
         menuBtn.addEventListener("click", () => {
             menuBtn.classList.toggle("active");
+            navigation.classList.toggle("active");
         })
     </script>
 
