--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </header>
 
     <section class="home">
+        <video src=""></video>
         <div class="content">
             <h1>Wonderful.<br><span>Island</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, quos nostrum! Earum perspiciatis quidem, reiciendis dolores explicabo exercitationem deserunt tenetur et ab porro adipisci sapiente doloremque, officiis mollitia dignissimos molestiae rerum vitae culpa, aliquam assumenda ratione impedit. Distinctio voluptate quibusdam, similique veritatis dolorem vel provident optio reiciendis saepe dolorum accusamus rerum eveniet ipsum, harum pariatur natus vero! Dignissimos cupiditate accusamus doloribus sed inventore consequatur consectetur, perferendis reprehenderit repudiandae, nisi ea dolores nulla illo blanditiis tempora non unde ullam quas quos sapiente! Modi ipsum amet dolores non ipsa suscipit pariatur tempora maiores porro? Voluptas, aspernatur quod. Voluptas nemo iusto ipsa tempore?,</p>
