BUILDING VIDEO JS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt" dir="ltr">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,9 +26,9 @@
     </header>
 
     <section class="home">
-        <video src=""></video>
+        <video class="video-slide" src="video/1.mp4" autoplay muted loop></video>
         <div class="content">
-            <h1>Wonderful.<br><span>Island</span></h1>
+            <h1>SUA CASA<br><span>É AQUI</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, quos nostrum! Earum perspiciatis quidem, reiciendis dolores explicabo exercitationem deserunt tenetur et ab porro adipisci sapiente doloremque, officiis mollitia dignissimos molestiae rerum vitae culpa, aliquam assumenda ratione impedit. Distinctio voluptate quibusdam, similique veritatis dolorem vel provident optio reiciendis saepe dolorum accusamus rerum eveniet ipsum, harum pariatur natus vero! Dignissimos cupiditate accusamus doloribus sed inventore consequatur consectetur, perferendis reprehenderit repudiandae, nisi ea dolores nulla illo blanditiis tempora non unde ullam quas quos sapiente! Modi ipsum amet dolores non ipsa suscipit pariatur tempora maiores porro? Voluptas, aspernatur quod. Voluptas nemo iusto ipsa tempore?,</p>
             <a href="#">Continuar Lendo</a>
         </div>
@@ -36,6 +36,13 @@
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+        <div class="slider-navigation">
+            <div class="nav-btn"></div>
+            <div class="nav-btn"></div>
+            <div class="nav-btn"></div>
+            <div class="nav-btn"></div>
+            <div class="nav-btn"></div>
         </div>
 
     </section>
@@ -48,7 +55,7 @@
         menuBtn.addEventListener("click", () => {
             menuBtn.classList.toggle("active");
             navigation.classList.toggle("active");
-        })
+        });
     </script>
 
 </body>
